# MegviiFacepp-Android-SDK

./: .gitignore  README.md  build.gradle  facepp.keystore  pack_apk.sh  packadapter.sh  settings.gradle
EclipseFaceppDemo/: .gitignore
EclipseFaceppDemo/FaceppDemo/: .gitignore  AndroidManifest.xml  project.properties  res  src
EclipseFaceppDemo/FaceppDemoUI/: .gitignore  AndroidManifest.xml  project-copy.bat  res  src
FaceppDemo/: build.gradle  settings.gradle
FaceppDemo/FaceppDemoUI/: build.gradle
FaceppDemo/FaceppDemoUI/src/main/: AndroidManifest.xml
FaceppDemo/app/: build.gradle  proguard-rules.pro
FaceppDemo/app/src/main/: AndroidManifest.xml
FaceppDemo/gradle/wrapper/: gradle-wrapper.properties
MGFaceppSDK/: .gitignore  settings.gradle
MGFaceppSDK/MGFaceppSDK/: build.gradle
MGFaceppSDK/MGFaceppSDK/src/main/: AndroidManifest.xml
demo/: .gitignore  build.gradle
demo/gradle/wrapper/: gradle-wrapper.properties
demo/src/main/: AndroidManifest.xml
faceppdemo/: .gitignore  build.gradle  proguard-rules.pro
faceppdemo/libs/: MGFaceppSDK-0.5.2.aar  MGLicenseManagerSDK-0.3.0.aar  MGLicenseManagerSDK-0.3.1.aar
faceppdemo/src/main/: AndroidManifest.xml
faceppdemo/src/main/res/values/: styles.xml  (+1 more)
faceppdemoui/: .gitignore  build.gradle
faceppdemoui/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle
sdk/src/main/: AndroidManifest.xml
sdk/src/main/cpp/: CMakeLists.txt  megvii_facepp_dynamic_jni.cpp  megvii_facepp_jni.cpp  megvii_facepp_jni.h
sdk/src/main/cpp/include/: MG_Common.h  MG_Facepp.h
(+91 files in other folders)
